<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task01">

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/buttum_name_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum9"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonNum0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_0"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum8" />

    <Button
        android:id="@+id/buttonNum1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_name_1"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/button_name_2"
        app:layout_constraintStart_toEndOf="@+id/buttonNum1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/button_name_3"
        app:layout_constraintStart_toEndOf="@+id/buttonNum2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNum4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_name_4"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum1" />

    <Button
        android:id="@+id/buttonNum5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_5"
        app:layout_constraintStart_toEndOf="@+id/buttonNum4"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum2" />

    <Button
        android:id="@+id/buttonNum9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_9"
        app:layout_constraintStart_toEndOf="@+id/buttonNum8"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum6" />

    <Button
        android:id="@+id/buttonNum7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_name_7"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum4" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/button_name_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum6"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        android:text="@string/button_name_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNum3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNum6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_6"
        app:layout_constraintStart_toEndOf="@+id/buttonNum5"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum3" />

    <Button
        android:id="@+id/buttonNum8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_8"
        app:layout_constraintStart_toEndOf="@+id/buttonNum7"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum5" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_name_clear"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum7" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_name_equal"
        app:layout_constraintStart_toEndOf="@+id/buttonNum0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum9" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/button_name_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/my_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="362dp"
        android:layout_height="115dp"
        android:layout_marginTop="50dp"
        android:gravity="bottom|right"
        android:text="@string/button_name_0"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>